error handling in flip tracking fixed flip tracking style on small devices

--- a/components/FlipTracking/FlipTracking.module.css
+++ b/components/FlipTracking/FlipTracking.module.css
@@ -3,6 +3,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     flex-direction: initial;
+    width: 100%;
 }
 
 .listGroupItem {
@@ -23,7 +24,7 @@
     width: 45%;
     text-align: center;
     border-color: transparent !important;
-    cursor: pointer
+    cursor: pointer;
 }
 
 .profitNumberHeader {
